src/assets/css/main.css
body {
  --accnat-body-padding: 2rem;
  --accnat-primary-color: hsl(0, 0%, 47%);
  color: var(--accnat-primary-color);
  padding: var(--accnat-body-padding);
}

.header {
  height: calc(100vh - 2 * var(--accnat-body-padding));
  background-image: linear-gradient(
      to right bottom,
      hsla(111, 55%, 64%, 0.8),
      hsla(160, 64%, 43%, 0.8)
    ),
    url("~@img/hero.jpg");
  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
  @apply .tw-bg-cover .tw-bg-top;
}

.logo-box {
  @apply .tw-absolute;
  top: calc(var(--accnat-body-padding) + 1rem);
  left: calc(var(--accnat-body-padding) + 1rem);
}

.logo {
  @apply tw-h-10;
}

.text-box {
  @apply .mu-position-center .tw-relative; /* absolute would also 
  been an option iff there would be a parent elm being relative  */
  @apply .tw-inline-block; /* else the child does not shrink 
  and hence does not center horizontally*/
  @apply .tw-text-center;
}

.heading-primary {
  backface-visibility: hidden; /* else elm moves slightly down 
  at the end of the animation */
  @apply .tw-uppercase .tw-text-white .tw-font-regular;
  @apply .tw-mb-6;
}

.heading-primary-main {
  letter-spacing: 2rem;
  animation: moveInLeft 2s ease-in-out;
  @apply .tw-block .tw-text-5xl;
}

.heading-primary-sub {
  letter-spacing: 0.2rem;
  animation: moveInRight 2s ease-in-out;
  @apply .tw-block .tw-font-bold;
}

.btn {
  transition: all 0.25s;
  backface-visibility: hidden; /* else elm moves slightly down 
  at the end of the animation */
  @apply .tw-inline-block .tw-rounded-full .tw-uppercase .tw-px-6 .tw-py-4;
  @apply .tw-relative;
}

.btn::after {
  content: "";
  display: inherit;
  transition: all 0.4s;
  @apply .tw-absolute .tw-pin;
  @apply .tw-w-full .tw-h-full .tw-rounded-full .tw-z--1;
}

.btn:hover {
  transform: translateY(-0.25rem);
  @apply .tw-shadow-lg;
}

.btn:hover::after {
  transform: scaleX(1.25) scaleY(1.6);
  @apply tw-opacity-0;
}

.btn:active {
  transform: translateY(-0.12rem);
  @apply .tw-shadow-md;
}

.btn-white {
  color: var(--accnat-primary-color);
  @apply .tw-bg-white;
}

.btn-white::after {
  @apply .tw-bg-white;
}

.btn-animated {
  animation: moveInBottom 1.25s ease-in-out 0.75s backwards;
}

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(-8rem);
  }

  80% {
    transform: translateX(1rem);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes moveInRight {
  0% {
    opacity: 0;
    transform: translateX(8rem);
  }

  80% {
    transform: translateX(-1rem);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes moveInBottom {
  0% {
    opacity: 0;
    transform: translateY(4rem);
  }

  80% {
    transform: translateY(-0.5rem);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

